FIX: Spacing between category name and count

--- a/assets/stylesheets/common/knowledge-explorer.scss
+++ b/assets/stylesheets/common/knowledge-explorer.scss
@@ -62,7 +62,7 @@
             color: $danger;
           }
         }
-        .tag-id {
+        .tag-id, .category-id {
           margin-right: 3px;
         }
       }
